--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=SlackAPI
 
 custom.property.maxrequest=${MAXREQUEST:40}
-custom.property.slackurl=${WEBHOOK:https://hooks.slack.com/services/Your-Slack-Webhook}
+custom.property.slackurl=${WEBHOOK:https://hooks.slack.com/services/}
